--- a/src/app/list-item/list-item.component.html
+++ b/src/app/list-item/list-item.component.html
@@ -1,3 +1,24 @@
-<p>
-  list-item works!
-</p>
+<div class="jumbotron" style="padding:45px 0px">
+  <h4 class="text-center">To Do List App</h4>
+</div>
+
+<div class="input-group">
+  <input type="text" class="form-control" #itemTitle>
+  <div class="input-group-addon hover-cursor" (click)="addItem(itemTitle)">
+    <i class="fa fa-plus-circle fa-2x"></i>
+  </div>
+</div>
+
+<div style="margin:5px 0px">
+  <ul class="list-group">
+    <li class="list-group-item" *ngFor="let item of toDoList">
+      <span class="hover-cursor" [class.text-success]="item.isMarked" (click)="toggleMark(item.key,item.isMarked)">
+        <i class="fa fa-lg" [ngClass]="item.isMarked?'fa-check-circle-o':'fa-circle-thin'"></i>
+      </span>
+      {{item.title}}
+      <span class="hover-cursor text-danger pull-right" (click)="removeItem(item.key)">
+        <i class="fa fa-trash-o fa-lg"></i>
+      </span>
+    </li>
+  </ul>
+</div>
