--- a/src/app/list-item/list-item.component.html
+++ b/src/app/list-item/list-item.component.html
@@ -12,7 +12,7 @@
 <div style="margin:5px 0px">
   <ul class="list-group">
     <li class="list-group-item" *ngFor="let item of toDoList">
-      <span class="hover-cursor" [class.text-success]="item.checked" (click)="toggleMark(item.id,item.checked)">
+      <span class="hover-cursor" [class.text-success]="item.checked" (click)="toggleMark(item.id,item.checked,item.description)">
         <i class="fa fa-lg" [ngClass]="item.checked?'fa-check-circle-o':'fa-circle-thin'"></i>
       </span>
       {{item.description}}
